--- a/public/admin.html
+++ b/public/admin.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
-    <div id="root"></div>
-    <script src="admin.js"></script>
+    <head></head>
+    <body>
+        <div id="root"></div>
+        <script src="admin.js"></script>
+    </body>
 </html>
