--- a/public/wstest.html
+++ b/public/wstest.html
@@ -2,9 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Title</title>
+        <link rel="stylesheet" href="wstest.css">
+        <title></title>
     </head>
     <body>
+        <div id="root"></div>
         <script src="wstest.js"></script>
     </body>
 </html>
