--- a/public/wstest.html
+++ b/public/wstest.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="wstest.css">
+        <link rel="stylesheet" href="calendar.css">
         <title></title>
     </head>
     <body>
